--- a/gitea/files/app.ini.j2
+++ b/gitea/files/app.ini.j2
@@ -35,19 +35,21 @@ SSH_PORT         = {{ gitea.server.ssh_port }}
 SSH_LISTEN_PORT  = {{ gitea.server.ssh_listen_port }}
 OFFLINE_MODE     = {{ gitea.server.offline_mode }}
 LFS_START_SERVER = {{ gitea.server.lfs_start_server }}
-LFS_CONTENT_PATH = {{ gitea.server.lfs_content_path }}
 LFS_JWT_SECRET   = {{ gitea.server.lfs_jwt_secret }}
 ENABLE_GZIP      = {{ gitea.server.enable_gzip }}
 LANDING_PAGE     = {{ gitea.server.landing_page }}
 
+[lfs]
+PATH = {{ gitea.lfs.path }}
+
 [mailer]
 ENABLED       = {{ gitea.mailer.enable }}
 HELO_HOSTNAME = {{ gitea.mailer.hostname }}
-HOST          = {{ gitea.mailer.hostandport }}
+SMTP_ADDR     = {{ gitea.mailer.smtp_addr }}
 FROM          = {{ gitea.mailer.from_address }}
 USER          = {{ gitea.mailer.smtp_user }}
 PASSWD        = {{ gitea.mailer.smtp_password }}
-SKIP_VERIFY   = {{ gitea.mailer.skip_verify }}
+FORCE_TRUST_SERVER_CERT   = {{ gitea.mailer.force_trust_server_cert }}
 
 [service]
 REGISTER_EMAIL_CONFIRM = {{ gitea.service.register_email_confirm }}
@@ -91,6 +93,9 @@ SECRET_KEY           = {{ gitea.get('security.secret_key', salt['grains.get_or_s
 LOGIN_REMEMBER_DAYS  = {{ gitea.security.remember_password_days }}
 COOKIE_USERNAME      = giteauser
 COOKIE_REMEMBER_NAME = giteausersession
+
+[webhook]
+ALLOWED_HOST_LIST = {{ gitea.webhook.allowed_host_list }}
 
 [other]
 SHOW_FOOTER_BRANDING = {{ gitea.other.show_footer_branding }}
